# throatmicdata

./: .gitignore  CLI_OUTLINE.md  DATASET_CARD.md  PROGRESS.md  README.md  analyze_dataset.py  cleanup_dataset.py  cleanup_report.json  config.yaml  dataset_analysis_coverage.txt  dataset_analysis_quality.json  dataset_analytics.py  dataset_manager.py  download_dataset.py  hello.py  prepare_sentences.py  pyproject.toml  record_audio.py  requirements.txt  throatmicdata.py  upload_dataset.py
data/: analysis_report_20241225_032157.txt  analysis_report_20241225_054744.txt
data/cache/: dataset_cache.json
data/cache/datasets--pauljunsukhan--throatmic_codered/refs/: main
data/cache/datasets--pauljunsukhan--throatmic_codered/snapshots/2b43399315ac054c8500e9fb75f895086882e2d1/data/: train-00000-of-00001.parquet
data/repository/: sentences.json  used_sentences.json
src/: __init__.py  analyzer.py  config.py  exceptions.py  nlp_manager.py  recorder.py  sentence_filter.py  sentence_repo.py  sentences.py
