[project]
name = "throatmicdata"
version = "0.1.0"
description = "Throat microphone dataset collection and management tools"
authors = [
    {name = "Paul Han", email = "io.paul@kato.cx"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"